<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gym Progress Tracker</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log in</string>
    <string name="login_error_invalid_credentials">Wrong username or password</string>
    <string name="login_error_network">Could not reach the server. Check your connection and try again.</string>
    <string name="login_error_server">Something went wrong. Please try again.</string>
    <string name="start_workout_title">Start a workout</string>
    <string name="start_workout_new">Start without a template</string>
    <string name="start_workout_in_progress">Workout in progress</string>
    <string name="start_workout_continue">Continue</string>
    <string name="discard_workout">Discard</string>
    <string name="discard_workout_title">Discard workout?</string>
    <string name="discard_workout_text">The exercises and sets you have entered will be lost.</string>
    <string name="discard_workout_confirm">Discard</string>
    <string name="discard_workout_cancel">Cancel</string>
    <string name="start_workout_from_template">From a template</string>
    <string name="start_workout_last_performed">Last performed %1$s</string>
    <string name="start_workout_never_performed">Not performed yet</string>
    <plurals name="start_workout_exercise_count">
        <item quantity="one">%1$d exercise</item>
        <item quantity="other">%1$d exercises</item>
    </plurals>
    <string name="start_workout_no_templates">No templates yet. Finish a workout to save it as a template.</string>
    <plurals name="start_workout_pending">
        <item quantity="one">%1$d workout waiting to sync</item>
        <item quantity="other">%1$d workouts waiting to sync</item>
    </plurals>
    <string name="workout_name_placeholder">New workout</string>
    <string name="workout_name_description">Workout name</string>
    <string name="workout_add_exercise">Add exercise</string>
    <string name="workout_choose_exercise">Choose an exercise</string>
    <string name="workout_exercise_added">Added</string>
    <string name="workout_picker_back">Back to workout</string>
    <string name="workout_search_exercises">Search exercises</string>
    <string name="workout_search_clear">Clear search</string>
    <string name="workout_remove_exercise">Remove %1$s</string>
    <string name="workout_remove_exercise_title">Remove %1$s?</string>
    <string name="workout_remove_exercise_text">The sets you have logged for it will be removed too.</string>
    <string name="workout_remove_exercise_confirm">Remove</string>
    <string name="workout_remove_exercise_cancel">Cancel</string>
    <string name="workout_set_number">Set</string>
    <string name="workout_set_weight">kg</string>
    <string name="workout_set_reps">Reps</string>
    <string name="workout_set_weight_description" tools:ignore="PluralsCandidate">Set %1$d weight in kg</string>
    <string name="workout_set_reps_description" tools:ignore="PluralsCandidate">Set %1$d reps</string>
    <string name="workout_add_set">Add set</string>
    <string name="workout_complete_set" tools:ignore="PluralsCandidate">Set %1$d completed</string>
    <string name="workout_remove_set">Remove set %1$d</string>
    <string name="workout_search_no_results">No exercises match \"%1$s\"</string>
    <string name="workout_no_exercises">No exercises yet. They\'re downloaded once you\'re online.</string>
    <string name="workout_save">Save workout</string>
    <string name="workout_save_incomplete_title">Save workout?</string>
    <plurals name="workout_save_incomplete_text">
        <item quantity="one">%1$d set isn\'t completed and won\'t be saved.</item>
        <item quantity="other">%1$d sets aren\'t completed and won\'t be saved.</item>
    </plurals>
    <string name="workout_save_incomplete_confirm">Save</string>
    <string name="workout_save_incomplete_cancel">Cancel</string>
    <string name="workout_save_error_name">Name the workout to save it.</string>
    <string name="workout_save_error_no_sets">Complete at least one set to save the workout.</string>
    <string name="user_logged_in_as">Logged in as</string>
    <string name="user_logged_out">Logged out</string>
    <string name="user_not_logged_in">Not logged in</string>
    <plurals name="user_pending">
        <item quantity="one">%1$d workout waiting to sync</item>
        <item quantity="other">%1$d workouts waiting to sync</item>
    </plurals>
    <string name="user_all_synced">All workouts are synced</string>
    <string name="user_sync">Sync</string>
    <string name="user_log_in_to_sync">Log in to sync</string>
    <string name="user_sync_error_network">Could not sync. Check your connection and try again.</string>
    <string name="user_sync_error_server">Something went wrong while syncing.</string>
    <string name="navigation_workout">Workout</string>
    <string name="navigation_user">User</string>
</resources>
