...
        WorkoutContent(
            uiState = WorkoutUiState(
                startedAt = Instant.now().minusSeconds(1234),
                name = "Push day",
                workoutExercises = listOf(
                    WorkoutExerciseEntry(
                        exercise = Exercise(Uuid.fromLongs(0, 1), "Bench Press (Barbell)"),
                        sets = listOf(
                            SetEntry(weightKg = "60", reps = "8", completed = true),
                            SetEntry(weightKg = "62,5", reps = "6", id = 1)
                        )
                    )
                ),
                exercises = listOf(Exercise(Uuid.fromLongs(0, 1), "Bench Press (Barbell)"), Exercise(Uuid.fromLongs(0, 2), "Squat (Barbell)"))
            ),
            onNameChange = {},
            onExerciseSelected = {},
            onRemoveExercise = {},
            onAddSet = {},
            onRemoveSet = { _, _ -> },
...
